@@ -23,8 +23,12 @@
 
 package me.shedaniel.rei.impl.client.gui.widget;
 
+import dev.architectury.utils.value.BooleanValue;
+import me.shedaniel.math.Point;
 import me.shedaniel.math.Rectangle;
 import me.shedaniel.rei.api.client.config.ConfigManager;
+import me.shedaniel.rei.api.client.config.ConfigObject;
+import me.shedaniel.rei.api.client.favorites.FavoriteMenuEntry;
 import me.shedaniel.rei.api.client.gui.config.SearchFieldLocation;
 import me.shedaniel.rei.api.client.gui.widgets.Button;
 import me.shedaniel.rei.api.client.gui.widgets.Tooltip;
@@ -38,16 +42,18 @@ import me.shedaniel.rei.impl.client.config.ConfigManagerImpl;
 import me.shedaniel.rei.impl.client.config.ConfigObjectImpl;
 import me.shedaniel.rei.impl.client.gui.ScreenOverlayImpl;
 import me.shedaniel.rei.impl.client.gui.modules.MenuAccess;
-import me.shedaniel.rei.impl.client.gui.modules.MenuEntry;
+import me.shedaniel.rei.impl.client.gui.modules.entries.SeparatorMenuEntry;
 import me.shedaniel.rei.impl.client.gui.modules.entries.SubMenuEntry;
 import me.shedaniel.rei.impl.client.gui.modules.entries.ToggleMenuEntry;
 import me.shedaniel.rei.impl.client.gui.screen.ConfigReloadingScreen;
+import me.shedaniel.rei.impl.client.search.method.DefaultInputMethod;
 import me.shedaniel.rei.impl.common.InternalLogger;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.renderer.entity.ItemRenderer;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.Mth;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.block.Blocks;
 import org.joml.Vector4f;
@@ -56,6 +62,7 @@ import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
 public class CraftableFilterButtonWidget {
     public static final UUID FILTER_MENU_UUID = UUID.fromString("2839e998-1679-4f9e-a257-37411d16f1e6");
@@ -74,7 +81,7 @@ public class CraftableFilterButtonWidget {
                 .onRender((matrices, button) -> {
                     button.setTint(ConfigManager.getInstance().isCraftableOnlyEnabled() ? 0x3800d907 : 0x38ff0000);
                     
-                    access.openOrClose(FILTER_MENU_UUID, button.getBounds(), CraftableFilterButtonWidget::menuEntries);
+                    access.openOrClose(FILTER_MENU_UUID, button.getBounds(), () -> menuEntries(access));
                 })
                 .containsMousePredicate((button, point) -> button.getBounds().contains(point) && overlay.isNotInExclusionZones(point.x, point.y))
                 .tooltipLineSupplier(button -> Component.translatable(ConfigManager.getInstance().isCraftableOnlyEnabled() ? "text.rei.showing_craftable" : "text.rei.showing_all"));
@@ -88,11 +95,11 @@ public class CraftableFilterButtonWidget {
         return Widgets.concat(filterButton, overlayWidget);
     }
     
-    private static Collection<MenuEntry> menuEntries() {
+    private static Collection<FavoriteMenuEntry> menuEntries(MenuAccess access) {
         ConfigObjectImpl config = ConfigManagerImpl.getInstance().getConfig();
-        ArrayList<MenuEntry> entries = new ArrayList<>(List.of(
+        ArrayList<FavoriteMenuEntry> entries = new ArrayList<>(List.of(
                 new SubMenuEntry(Component.translatable("text.rei.config.menu.search_field.position"), Arrays.stream(SearchFieldLocation.values())
-                        .<MenuEntry>map(location -> ToggleMenuEntry.of(Component.literal(location.toString()),
+                        .<FavoriteMenuEntry>map(location -> ToggleMenuEntry.of(Component.literal(location.toString()),
                                         () -> config.getSearchFieldLocation() == location,
                                         bool -> config.setSearchFieldLocation(location))
                                 .withActive(() -> config.getSearchFieldLocation() != location)
@@ -102,7 +109,7 @@ public class CraftableFilterButtonWidget {
         
         List<Map.Entry<ResourceLocation, InputMethod<?>>> applicableInputMethods = getApplicableInputMethods();
         if (applicableInputMethods.size() > 1) {
-            entries.add(new SubMenuEntry(Component.translatable("text.rei.config.menu.search_field.input_method"), createInputMethodEntries(applicableInputMethods)));
+            entries.add(new SubMenuEntry(Component.translatable("text.rei.config.menu.search_field.input_method"), createInputMethodEntries(access, applicableInputMethods)));
         }
         
         return entries;
@@ -115,10 +122,10 @@ public class CraftableFilterButtonWidget {
                 .toList();
     }
     
-    public static List<MenuEntry> createInputMethodEntries(List<Map.Entry<ResourceLocation, InputMethod<?>>> applicableInputMethods) {
+    public static List<FavoriteMenuEntry> createInputMethodEntries(MenuAccess access, List<Map.Entry<ResourceLocation, InputMethod<?>>> applicableInputMethods) {
         ConfigObjectImpl config = ConfigManagerImpl.getInstance().getConfig();
-        return applicableInputMethods.stream()
-                .<MenuEntry>map(pair -> ToggleMenuEntry.of(pair.getValue().getName(),
+        List<FavoriteMenuEntry> entries = applicableInputMethods.stream()
+                .<FavoriteMenuEntry>map(pair -> ToggleMenuEntry.of(pair.getValue().getName(),
                                 () -> Objects.equals(config.getInputMethodId(), pair.getKey()),
                                 bool -> {
                                     ExecutorService service = Executors.newSingleThreadExecutor();
@@ -130,7 +137,8 @@ public class CraftableFilterButtonWidget {
                                         
                                         ConfigManagerImpl.getInstance().getConfig().setInputMethodId(new ResourceLocation("rei:default"));
                                     }).join();
-                                    CompletableFuture<Void> future = pair.getValue().prepare(service).whenComplete((unused, throwable) -> {
+                                    double[] progress = {0};
+                                    CompletableFuture<Void> future = pair.getValue().prepare(service, p -> progress[0] = Mth.clamp(p, 0, 1)).whenComplete((unused, throwable) -> {
                                         if (throwable != null) {
                                             InternalLogger.getInstance().error("Failed to prepare input method", throwable);
                                             ConfigManagerImpl.getInstance().getConfig().setInputMethodId(new ResourceLocation("rei:default"));
@@ -139,18 +147,44 @@ public class CraftableFilterButtonWidget {
                                         }
                                     });
                                     Screen screen = Minecraft.getInstance().screen;
-                                    Minecraft.getInstance().setScreen(new ConfigReloadingScreen(Component.translatable("text.rei.input.methods.initializing"),
+                                    ConfigReloadingScreen reloadingScreen = new ConfigReloadingScreen(Component.translatable("text.rei.input.methods.initializing"),
                                             () -> !future.isDone(), () -> {
                                         Minecraft.getInstance().setScreen(screen);
-                                    }));
+                                    });
+                                    reloadingScreen.setSubtitle(() -> Component.translatable("text.rei.input.methods.reload.progress", String.format("%.2f", progress[0] * 100)));
+                                    Minecraft.getInstance().setScreen(reloadingScreen);
+                                    access.close();
                                     future.whenComplete((unused, throwable) -> {
                                         service.shutdown();
                                     });
+                                    ScreenOverlayImpl.getInstance().getHintsContainer().addHint(12, () -> new Point(getCraftableFilterBounds().getCenterX(), getCraftableFilterBounds().getCenterY()),
+                                            "text.rei.hint.input.methods", List.of(Component.translatable("text.rei.hint.input.methods")));
                                 })
                         .withActive(() -> !Objects.equals(config.getInputMethodId(), pair.getKey()))
                         .withTooltip(() -> Tooltip.create(Widget.mouse(), pair.getValue().getDescription()))
                 )
-                .toList();
+                .collect(Collectors.toList());
+        InputMethod<?> active = InputMethod.active();
+        if (!(active instanceof DefaultInputMethod)) {
+            entries.add(0, new SeparatorMenuEntry());
+            entries.add(0, FavoriteMenuEntry.createToggle(Component.translatable("text.rei.input.methods.tooltip.hints"), new BooleanValue() {
+                @Override
+                public void accept(boolean t) {
+                    ConfigManagerImpl.getInstance().getConfig().setDoDisplayIMEHints(!getAsBoolean());
+                }
+                
+                @Override
+                public boolean getAsBoolean() {
+                    return ConfigObject.getInstance().doDisplayIMEHints();
+                }
+            }));
+        }
+        List<FavoriteMenuEntry> optionsMenuEntries = active.getOptionsMenuEntries();
+        if (!optionsMenuEntries.isEmpty()) {
+            entries.add(new SeparatorMenuEntry());
+            entries.addAll(optionsMenuEntries);
+        }
+        return entries;
     }
     
     private static Rectangle getCraftableFilterBounds() {
